# cdx

./: .gitattributes  AGENTS.md  Cargo.toml  PLAN.md  README.md  config.default.toml  tasks.md
docs/: old-cdx-ps1.ps1
scripts/: install.ps1  install.sh
src/: cli.rs  config.rs  main.rs
src/preview/: mod.rs
src/search/: mod.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/walker/: mod.rs
src/zoxide/: mod.rs
