[package]
name = "cdx"
version = "0.1.0"
edition = "2021"
description = "Interactive directory navigator"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
nucleo-matcher = "0.3"
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
ansi-to-tui = "8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
